ratetable can now be added to rate widget and number of styles can be set

--- a/Areas/Widgets/Content/widget-bootstrap.less
+++ b/Areas/Widgets/Content/widget-bootstrap.less
@@ -26,7 +26,7 @@ body {
 @import "../../../Content/less/bootstrap/type.less";
 // @import "../../../Content/less/bootstrap/code.less";
 @import "../../../Content/less/bootstrap/grid.less";
-// @import "../../../Content/less/bootstrap/tables.less";
+@import "../../../Content/less/bootstrap/tables.less";
 @import "../../../Content/less/bootstrap/forms.less";
 @import "../../../Content/less/bootstrap/buttons.less";
 
@@ -39,7 +39,7 @@ body {
 // @import "../../../Content/less/bootstrap/navbar.less";
 // @import "../../../Content/less/bootstrap/breadcrumbs.less";
 @import "../../../Content/less/bootstrap/pagination.less";
-// @import "../../../Content/less/bootstrap/pager.less";
+@import "../../../Content/less/bootstrap/pager.less";
 // @import "../../../Content/less/bootstrap/labels.less";
 // @import "../../../Content/less/bootstrap/badges.less";
 // @import "../../../Content/less/bootstrap/jumbotron.less";
