--- a/Areas/Widgets/Content/widget.less
+++ b/Areas/Widgets/Content/widget.less
@@ -16,6 +16,7 @@
 	font-family: @font-family-base;
 	font-size: @font-size-base;
 	@import (less) url('widget-bootstrap.css');
+	@import (less) url('../../../Content/lib/datatables/dataTables.bootstrap.min.css');
 	/*@import 'captcha.less';*/
 
 	button[type=submit]:disabled {
