--- a/Content/lt-variables.less
+++ b/Content/lt-variables.less
@@ -47,8 +47,8 @@
 
 
 // Jumbotron
-@jumbotron-color:			#eee;
-@jumbotron-bg:				@lt-color-darker;
+@jumbotron-color:			@lt-color-darker;
+@jumbotron-bg:				mix(@lt-color-darker, #FFFFFF, 20%);
 
 // Box Shadow
 @box-shadow: 				4px 4px 2px rgba(0,0,0,0.2);
