--- a/Content/site-bootstrap.less
+++ b/Content/site-bootstrap.less
@@ -1,7 +1,7 @@
 @import "less/bootstrap/bootstrap.less";
 @icon-font-path: "/fonts/";
 
-// Roboto and Open Sans fonts
+/* // Roboto and Open Sans fonts
 @font-face {
 	font-family: 'Open Sans';
 	src: url('/fonts/OpenSans-Regular-webfont.eot');
@@ -24,7 +24,7 @@
 	font-style: normal;
 }
 
-@font-family-sans-serif:  Roboto, Open Sans, "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-sans-serif:  Roboto, Open Sans, "Helvetica Neue", Helvetica, Arial, sans-serif; */
 
 //** Breadcrumb background color
 @breadcrumb-bg:				#f7f7f7;
