--- a/Areas/Widgets/Content/site.less
+++ b/Areas/Widgets/Content/site.less
@@ -122,11 +122,11 @@
 	//.edit-tool-right { float: right; margin-left: 5px; }
 }
 
-.ltw-preview {
-	.lt-widget-border {
-		padding: 8px;
-	}
-}
+// .ltw-preview {
+// 	.lt-widget-border {
+// 		padding: 8px;
+// 	}
+// }
 
 .show-on-active-inline-block {
 	display: none;
@@ -193,6 +193,6 @@ input {
 h1 {
     font-size:26px;
 }
-h2 { 
+h2 {
     font-size:20px;
 }
