--- a/Content/Site.css
+++ b/Content/Site.css
@@ -95,17 +95,30 @@ textarea {
 .lt-spinner {
   width: 100px;
   height: 100px;
-  animation: spinner 1s linear infinite;
+  -webkit-animation: spinner 1s linear infinite;
+          animation: spinner 1s linear infinite;
 }
 .lt-spinner img {
   width: 100%;
 }
-@keyframes spinner {
+@-webkit-keyframes spinner {
   from {
-    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+@keyframes spinner {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
 .modal-header.alert {
@@ -143,7 +156,6 @@ textarea {
   opacity: 1;
   filter: alpha(opacity=100);
   -webkit-transition: all ease-in-out 0.2s;
-  -o-transition: all ease-in-out 0.2s;
   transition: all ease-in-out 0.2s;
 }
 .animate-ng-hide.ng-hide {
