--- a/Content/lt-variables.less
+++ b/Content/lt-variables.less
@@ -1,3 +1,5 @@
+@import "less/bootstrap/variables.less";
+
 // Variables to customize bootstrap plus additional files.
 
 // Fonts
@@ -6,6 +8,12 @@
 
 // Header
 @page-head-sm-top-height: 75px;
+
+// Breadcrumb
+@breadcrumb-bg:				#f7f7f7;
+@breadcrumb-color:			#888;
+@breadcrumb-active-color:	@gray-light;
+@breadcrumb-li-margin-right: 6px;
 
 // Footer
 @footer-height: 100px;
@@ -16,6 +24,7 @@
 @lt-color-lighter:				lighten(@lt-color, 10%);
 @lt-link-color-inverse:			lighten(@lt-color, 50%);
 @lt-link-hover-color-inverse:	lighten(@lt-color, 40%);
+@spinner-color: #ffffff;
 
 // Brand Colors
 @brand-primary:					@lt-color;
