--- a/Content/Site.css
+++ b/Content/Site.css
@@ -75,7 +75,8 @@ textarea {
 .spinner-color {
   color: #ffffff;
 }
-.lt-no-bottom-margin {
+.lt-no-bottom-margin,
+.m-b-0 {
   margin-bottom: 0px;
 }
 .resize-none {
@@ -95,30 +96,17 @@ textarea {
 .lt-spinner {
   width: 100px;
   height: 100px;
-  -webkit-animation: spinner 1s linear infinite;
-          animation: spinner 1s linear infinite;
+  animation: spinner 1s linear infinite;
 }
 .lt-spinner img {
   width: 100%;
 }
-@-webkit-keyframes spinner {
-  from {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
 @keyframes spinner {
   from {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   to {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 .modal-header.alert {
@@ -156,6 +144,7 @@ textarea {
   opacity: 1;
   filter: alpha(opacity=100);
   -webkit-transition: all ease-in-out 0.2s;
+  -o-transition: all ease-in-out 0.2s;
   transition: all ease-in-out 0.2s;
 }
 .animate-ng-hide.ng-hide {
