--- a/Content/lt-site.css
+++ b/Content/lt-site.css
@@ -1,4 +1,30 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Courgette');
+.form-horizontal .form-group-sm .checkbox {
+  padding-top: 3px;
+}
+.form-horizontal .control-label.text-left {
+  text-align: left;
+}
+.table-no-heading tbody > tr:first-child > td {
+  border-top: none;
+}
+.lt-breadcrumb {
+  color: #888;
+}
+.lt-breadcrumb > li {
+  margin-right: 6px;
+}
+.lt-breadcrumb > li + li:before {
+  content: '\f105';
+  font-family: FontAwesome;
+  margin-right: 10px;
+}
+.lt-breadcrumb > li > i.fa {
+  margin-right: 6px;
+}
+.lt-breadcrumb a {
+  color: #888;
+}
 html.html-footer-sticky {
   position: relative;
   min-height: 100%;
@@ -19,23 +45,6 @@ html.html-footer-sticky body .footer-sticky {
 .page-head > .page-head-menu .navbar {
   margin-bottom: 0;
 }
-.footer {
-  height: 100px;
-  border-top: 1px solid #eee;
-  padding-top: 0.8em;
-  font-size: 0.8em;
-}
-.footer-inverse {
-  color: #eeeeee;
-  border-top: none;
-  background-color: #132345;
-}
-.footer-inverse a {
-  color: #a4b9e6;
-}
-.footer-inverse a:hover {
-  color: #7c9adb;
-}
 .page-head-inverse {
   border-bottom: 4px solid #132345;
 }
@@ -53,6 +62,9 @@ html.html-footer-sticky body .footer-sticky {
 .page-head-top .top-menu {
   float: left;
 }
+.page-head-top .top-menu .UserName {
+  font-family: 'Courgette', cursive;
+}
 .page-head-top .top-menu .nav > li > a {
   color: #777777;
   background-color: transparent;
@@ -69,7 +81,25 @@ html.html-footer-sticky body .footer-sticky {
   margin-top: 4px;
   max-height: 46px;
 }
+.footer {
+  height: 100px;
+  border-top: 1px solid #eee;
+  padding-top: 0.8em;
+  font-size: 0.8em;
+}
+.footer-inverse {
+  color: #eeeeee;
+  border-top: none;
+  background-color: #132345;
+}
+.footer-inverse a {
+  color: #a4b9e6;
+}
+.footer-inverse a:hover {
+  color: #7c9adb;
+}
 .dropdown .dropdown-menu {
+  -webkit-box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.2);
 }
 .dropdown .dropdown-menu > li > a {
@@ -82,6 +112,7 @@ html.html-footer-sticky body .footer-sticky {
   background-color: #fff;
   border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.2);
 }
 .dropdown.dropdown-bubble .dropdown-menu > li > a {
@@ -153,7 +184,6 @@ html.html-footer-sticky body .footer-sticky {
   visibility: hidden;
   opacity: 0;
   filter: alpha(opacity=0);
-  -webkit-transition: all 0.4s;
   transition: all 0.4s;
 }
 .dropdown-fade.dropdown.open > .dropdown-menu,
@@ -171,21 +201,86 @@ html.html-footer-sticky body .footer-sticky {
 .m-b-0 {
   margin-bottom: 0;
 }
+.pre-code {
+  white-space: pre-wrap;
+}
+.navbar .UserName {
+  font-size: 140%;
+  font-family: 'Courgette', cursive;
+}
+.resize-none {
+  resize: none;
+}
+.resize-vertical {
+  resize: vertical;
+}
+.resize-horizontal {
+  resize: horizontal;
+}
+.under-construction {
+  pointer-events: none;
+  cursor: not-allowed;
+  opacity: .5;
+}
+.spinner-color {
+  color: #ffffff;
+}
+.modal-header-alert.alert {
+  margin-bottom: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.ng-hide {
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+.animate-ng-hide {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-transition: all ease-in-out 0.2s;
+  -o-transition: all ease-in-out 0.2s;
+  transition: all ease-in-out 0.2s;
+}
+.animate-ng-hide.ng-hide {
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+.modal-processing {
+  padding: 20px 10px;
+  margin-bottom: 100px;
+  background-color: #FFFFFF;
+  border: 2px solid #000000;
+}
+.modal-processing h3 {
+  margin: 5px 0;
+  font-size: 18px;
+}
+.modal-processing img {
+  width: 64px;
+  padding-right: 20px;
+}
 @media (min-width: 768px) {
   .page-head {
     border-bottom: none;
   }
-  .page-head-top-fixed {
+  body.page-head-top-fixed .LoanTekAdminBar {
+    position: fixed;
+    top: 0;
+    opacity: 0.9;
+    filter: alpha(opacity=90);
+  }
+  body.page-head-top-fixed .page-head {
     margin-top: 75px;
   }
-  .page-head-top-fixed > .page-head-top {
+  body.page-head-top-fixed .page-head > .page-head-top {
     border-bottom: 1px solid #132345;
     position: fixed;
     width: 100%;
-    margin-top: -75px;
+    top: 0;
+    left: 0;
     z-index: 2;
   }
-  .page-head-top-fixed > .page-head-menu {
+  body.page-head-top-fixed .page-head > .page-head-menu {
     z-index: 1;
   }
   .page-head-top {
@@ -197,9 +292,22 @@ html.html-footer-sticky body .footer-sticky {
   .page-head-top .top-menu {
     margin-top: 13px;
   }
+  .page-head-top .top-menu .UserName {
+    font-size: 140%;
+  }
   .page-head-top .logo-lt {
     margin-top: 4px;
     max-height: 66px;
+  }
+  .page-head-menu-fixed .page-head {
+    height: 126px;
+  }
+  .page-head-menu-fixed .page-head > .menu-fixed {
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    z-index: 1000;
   }
   .dropdown-sm-fade.dropdown > .dropdown-menu,
   .dropdown-sm-fade .dropdown > .dropdown-menu {
@@ -207,7 +315,6 @@ html.html-footer-sticky body .footer-sticky {
     visibility: hidden;
     opacity: 0;
     filter: alpha(opacity=0);
-    -webkit-transition: all 0.4s;
     transition: all 0.4s;
   }
   .dropdown-sm-fade.dropdown.open > .dropdown-menu,
@@ -222,7 +329,6 @@ html.html-footer-sticky body .footer-sticky {
     visibility: hidden;
     opacity: 0;
     filter: alpha(opacity=0);
-    -webkit-transition: all 0.4s;
     transition: all 0.4s;
   }
   .dropdown-sm-fade.dropdown.open > .dropdown-menu,
@@ -250,5 +356,11 @@ html.html-footer-sticky body .footer-sticky {
   .footer {
     padding-top: 1em;
     font-size: 1em;
+  }
+  .modal-processing {
+    padding: 40px;
+  }
+  .modal-processing h3 {
+    font-size: 24px;
   }
 }
